<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_login" android:title="@string/login"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_register" android:title="@string/register"
        android:orderInCategory="100"  />
    <item android:id="@+id/action_sync_book" android:title="@string/sync_books"
        android:icon="@drawable/sync"
        android:orderInCategory="102" app:showAsAction="ifRoom" />
    <!--item android:id="@+id/action_postBookWanted" android:title="@string/post_a_book"
        android:icon="@drawable/book_wanted_icon"
        android:orderInCategory="101" app:showAsAction="ifRoom" / -->
    <item android:id="@+id/action_postABook" android:title="@string/post_a_book_wanted"
        android:icon="@drawable/for_sale"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_mypostings" android:title="@string/myPostings"
        android:orderInCategory="100"/>
    <item android:id="@+id/action_setting" android:title="@string/setting"
        android:orderInCategory="100"/>
    <item android:id="@+id/action_logout" android:title="Log out"
        android:orderInCategory="100" />


</menu>
