<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.cascadia.bookmarked.BookDetailActivity"
    tools:showIn="@layout/activity_book_detail">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            >

            <!-- Name Label -->

            <!-- ISBN -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/isbn" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/bookIsbn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/isbn_hint"
                    android:inputType="number"
                    android:maxLength="15" />

                <Button
                    android:id="@+id/barcodeButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/barcode_icon"
                    android:onClick="onBarcodeButtonClicked" />

            </LinearLayout>
            <!-- Book title -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title" />

            <EditText
                android:id="@+id/bookTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title_hint"
                android:maxLength="50" />

            <!-- Book author -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_author" />

            <EditText
                android:id="@+id/bookAuthor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_author_hint"
                android:maxLength="50" />

            <!-- Book edition -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_edition" />

            <EditText
                android:id="@+id/bookEdition"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_edition_hint"
                android:maxLength="50" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_description" />

            <EditText
                android:id="@+id/bookDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_description_hint"
                android:maxLength="500" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/asking_price" />

            <EditText
                android:id="@+id/bookAskingPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_asking_price_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_condition" />

            <Spinner
                android:id="@+id/bookConditionSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment" />

            <EditText
                android:id="@+id/book4SaleComment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment_hint"
                android:maxLength="250" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/contactSellerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:text="Contact Seller" />

</RelativeLayout>
