<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.cascadia.bookmarked.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password"
    android:orientation="vertical">

    <!-- View Title Label -->
    <!--TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/change_password"
        android:textSize="25sp"
        android:textStyle="bold" /-->

    <!-- password Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_pwd"
        android:id="@+id/currPwdTextView" />

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Enter current password"
        android:inputType="textPassword" />

    <!-- password Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_pwd" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Enter new password"
        android:inputType="textPassword" />

    <!-- password Label -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/retype_new_pwd" />

    <EditText
        android:id="@+id/retypeNewPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Retype new password"
        android:inputType="textPassword" />

    <!-- Error message -->
    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:textColor="#e30000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:background="@color/primary"
        android:onClick="changePassword"
        android:textAllCaps="false"
        android:text="@string/change_password"
        android:textColor="#fff"
        android:textStyle="bold"
        style="@android:style/Widget.Button" />

    <Button
        android:id="@+id/btnLinkCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:onClick="onCancelBtnClicked"
        android:text="@string/action_cancel"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textStyle="bold" />

</LinearLayout>
